--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
      <div class="card">
        <div class="card-body">
          <h2>Sign In</h2>
-         <form action="sign-in" method="POST">
+         <form action="signin" method="POST">
            <div class="form-group">
              <label for="username">Username</label>
              <input type="text" class="form-control col-lg-9" id="username" aria-describedby="emailHelp" placeholder="Enter Username" name="username">
