--- a/views/checklist.ejs
+++ b/views/checklist.ejs
@@ -12,6 +12,7 @@
       <div class="card">
         <div class="card-body">
           <h1>Checklist</h1>
+          <h3><%= username%></h3>
         </div>
       </div>
     </div>
