Send data to checklist from root

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,12 +12,12 @@
      <div class="card">
        <div class="card-body">
          <h2>Sign In</h2>
-         <form action="signin" method="GET">
+         <form action="signin" method="POST">
            <div class="form-group">
              <label for="username">Username</label>
-             <input type="text" class="form-control col-lg-9" id="username" aria-describedby="emailHelp" placeholder="Enter Username" name="username">
+             <input type="text" class="form-control col-lg-9" id="username" placeholder="Enter Username" name="username">
              <label for="password">Password</label>
-             <input type="text" class="form-control col-lg-9" id="password" aria-describedby="emailHelp" placeholder="Enter Password" name="password">
+             <input type="text" class="form-control col-lg-9" id="password" placeholder="Enter Password" name="password">
             </div>
            <button type="submit" class="btn btn-primary">Submit</button>
          </form>
