--- a/views/checklist.ejs
+++ b/views/checklist.ejs
@@ -13,6 +13,13 @@
         <div class="card-body">
           <h1>Checklist</h1>
         </div>
+        <% data.forEach(item => {%>
+        <div class="card">
+          <div class="card-body">
+            <h4 id=<%= item.checkListId%>><%= item.names%></h4>
+          </div>
+        </div>
+        <% }) %>
       </div>
     </div>
   </body>
