--- a/views/checklist.ejs
+++ b/views/checklist.ejs
@@ -13,13 +13,25 @@
         <div class="card-body">
           <h1>Checklist</h1>
         </div>
-        <% data.forEach(item => {%>
-        <div class="card">
-          <div class="card-body">
-            <h4 id=<%= item.checkListId%>><%= item.names%></h4>
+        <div id="accordian">
+          <% data.forEach(item => {%>
+          <div class="card">
+            <div class="card-body">
+              <div class="row">
+                <div class="mx-4">
+                  <h4 id=<%= item.checkListId%>><%= item.names%></h4>
+                </div>
+                <div class="mx-4">
+                  <button type="button" class="btn btn-primary" name=<%= item.checkListId%>>See Tasks</button>
+                </div>
+                <div class="mx-4">
+                  <button type="button" class="btn btn-primary" name=<%= item.checkListId%>>Delete</button>
+                </div>
+              </div>
+            </div>
           </div>
+          <% }) %>
         </div>
-        <% }) %>
       </div>
     </div>
     <div class="container mt-4">
@@ -34,4 +46,5 @@
       </div>
     </div>
   </body>
+  <script src="/js/checklist_script.js" type="text/javascript"></script>
 </html>
