--- a/views/checklist.ejs
+++ b/views/checklist.ejs
@@ -22,10 +22,10 @@
                   <h4 id=<%= item.checkListId%>><%= item.names%></h4>
                 </div>
                 <div class="mx-4">
-                  <button type="button" class="btn btn-primary" name=<%= item.checkListId%>>See Tasks</button>
+                  <a class="btn btn-primary">See Tasks</a>
                 </div>
                 <div class="mx-4">
-                  <button type="button" class="btn btn-primary" name=<%= item.checkListId%>>Delete</button>
+                  <a  class="btn btn-primary", href="/checklist/deleteChecklist?method=DELETE&checklistId=<%= item.checkListId%>">Delete</a>
                 </div>
               </div>
             </div>
@@ -46,5 +46,4 @@
       </div>
     </div>
   </body>
-  <script src="/js/checklist_script.js" type="text/javascript"></script>
 </html>
