Filled Profile page

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -9,17 +9,17 @@
 
   <body>
     <div class="container mt-4">
-      <h1 class="text-center">INSERT NAME</h1>
+      <h1 class="text-center"><%=names%></h1>
     </div>
 
     <div class="container mt-4">
       <div class="card">
         <div class="class-body">
-          <h4>Completion Rate:</h4>
+          <h4>Completion Rate: <%=completionRate%></h4>
         </div>
       </div>
-      <a href="tbd" class="btn btn-primary">Groups</a>
-      
+      <a href="tbd" class="btn btn-primary mt-4">Go to Groups</a>
+
     </div>
   </body>
 </html>
