Added route back to checklist from profile

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -18,6 +18,7 @@
           <h4>Completion Rate: <%=completionRate%></h4>
         </div>
       </div>
+      <a href="/checklist/loginLanding?userId=<%= userId%>" class="btn btn-primary mt-4">My Checklists</a>
       <a href="tbd" class="btn btn-primary mt-4">Go to Groups</a>
 
     </div>
