--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -19,7 +19,7 @@
         </div>
       </div>
       <a href="/checklist/loginLanding?userId=<%= userId%>" class="btn btn-primary mt-4">My Checklists</a>
-      <a href="tbd" class="btn btn-primary mt-4">Go to Groups</a>
+      <a href="/groups/groupsLanding?userId=<%= userId%>" class="btn btn-primary mt-4">My Groups</a>
 
     </div>
   </body>
