--- a/views/groups.ejs
+++ b/views/groups.ejs
@@ -28,7 +28,7 @@
                     <a href="tbd" class="btn btn-primary">Go to Group</a>
                   </div>
                   <div class="mx-4">
-                    <a  class="btn btn-primary" href="/checklist/deleteChecklist?method=DELETE&checklistId=<%= item.checkListId%>">Leave Group</a>
+                    <a  class="btn btn-primary" href="/groups/leaveGroup?method=DELETE&groupId=<%= item.groupId%>">Leave Group</a>
                   </div>
                 </div>
               </div>
