--- a/views/groups.ejs
+++ b/views/groups.ejs
@@ -22,10 +22,10 @@
               <div class="card-body">
                 <div class="row">
                   <div class="mx-4">
-                    <h4 id=<%= item.checkListId%>><%= item.names%></h4>
+                    <h4><%= item.names%></h4>
                   </div>
                   <div class="mx-4">
-                    <a href="/groupView/landing?userId=<%= userId%>&groupId=<%= item.groupId%>" class="btn btn-primary">Go to Group</a>
+                    <a href="/groupView/landing?userId=<%= userId%>&groupId=<%= item.groupId%>&groupName=<%= item.names%>" class="btn btn-primary">Go to Group</a>
                   </div>
                   <div class="mx-4">
                     <a  class="btn btn-primary" href="/groups/leaveGroup?method=DELETE&groupId=<%= item.groupId%>">Leave Group</a>
