--- a/views/groupView.ejs
+++ b/views/groupView.ejs
@@ -19,8 +19,16 @@
   <div class="container mt-4">
     <div class="card">
       <div class="class-body">
-        <h4>Average Completion Rate:</h4>
-        <h4>Most Productive Day: </h4>
+        <div class = "row">
+          <button id="avgCompRateBtn" class="btn btn-primary m-2">Refresh</button>
+          <h4 class="m-2">Average Completion Rate:</h4>
+          <h4 id="avgCompRate" class="m-2"></h4>
+        </div>
+        <div class="row">
+          <button id="mostProdDayBtn" class="btn btn-primary m-2">Refresh</button>
+          <h4 class="m-2">Most Productive Day:</h4>
+          <h4 id="mostProdDay" class="m-2"></h4> 
+        </div>
       </div>
     </div>
   </div>
@@ -51,4 +59,5 @@
     </div>
   </div>
 </body>
+<script src="/js/groupViewScript.js"></script>
 </html>
