Created and linked tasks page

--- a/views/groupView.ejs
+++ b/views/groupView.ejs
@@ -9,7 +9,7 @@
 
  <body>
   <div class="container mt-4">
-    <a href="/profile/profileLanding?userId=<%userId%>" class="btn btn-primary position-relative">Profile</a>
+    <a href="/groups/landing?userId=<%userId%>" class="btn btn-primary position-relative">Back</a>
   </div>
   
   <div class="container mt-4">
@@ -46,10 +46,10 @@
                   <h4><%= item.names%></h4>
                 </div>
                 <div class="mx-4">
-                  <a href="/groupView/landing?userId=<%= userId%>&groupId=<%= item.groupId%>" class="btn btn-primary">Go to Group</a>
+                  <a href="" class="btn btn-primary">To be implemented</a>
                 </div>
                 <div class="mx-4">
-                  <a  class="btn btn-primary" href="/groups/leaveGroup?method=DELETE&groupId=<%= item.groupId%>">Leave Group</a>
+                  <a href="" class="btn btn-primary">To be implemented</a>
                 </div>
               </div>
             </div>
