--- a/views/checklist.ejs
+++ b/views/checklist.ejs
@@ -25,10 +25,10 @@
                   <h4 id=<%= item.checkListId%>><%= item.names%></h4>
                 </div>
                 <div class="mx-4">
-                  <a class="btn btn-primary">See Tasks</a>
+                  <a href="/tasks/landing?userId=<%= userId%>&checklistId=<%= item.checkListId%>" class="btn btn-primary">See Tasks</a>
                 </div>
                 <div class="mx-4">
-                  <a  class="btn btn-primary", href="/checklist/deleteChecklist?method=DELETE&checklistId=<%= item.checkListId%>">Delete</a>
+                  <a href="/checklist/deleteChecklist?method=DELETE&checklistId=<%= item.checkListId%>" class="btn btn-primary">Delete</a>
                 </div>
               </div>
             </div>
