--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -18,7 +18,7 @@
           <h4>Completion Rate: <%=completionRate%></h4>
         </div>
       </div>
-      <a href="/checklist/loginLanding?userId=<%= userId%>" class="btn btn-primary mt-4">My Checklists</a>
+      <a href="/checklist/landing?userId=<%= userId%>" class="btn btn-primary mt-4">My Checklists</a>
       <a href="/groups/landing?userId=<%= userId%>" class="btn btn-primary mt-4">My Groups</a>
 
     </div>
