Fully connected friend task page

--- a/views/restrictedTasks.ejs
+++ b/views/restrictedTasks.ejs
@@ -9,7 +9,7 @@
 
   <body>
     <div class="container mt-4">
-      <a href="/groupView/landing?userId=<%= userId%>&groupId=<%= groupId%>&groupName=<%= groupName%>" class="btn btn-primary col-sm mx-4">Back to Group</a>
+      <a href="/groupView/landing?userId=<%= userId%>&groupId=<%= groupId%>&groupName=<%= groupName%>" class="btn btn-primary position-relative">Back to Group</a>
     </div>
     <div class="container mt-4">
       <div class="card">
