--- a/views/groupView.ejs
+++ b/views/groupView.ejs
@@ -52,11 +52,8 @@
                 <div class="col-sm">
                   <div class="row">
                     <a href="" class="btn btn-primary col-sm mx-2">To be implemented</a>
-                    <a href="/restrictedTasks/landing?
-                      userId=<%= userId%>
-                      &friendId=<%= item.userId%>
-                      &groupId=<%= groupId%>
-                      &groupName=<%= groupName%>" class="btn btn-primary col-sm mx-2">See Tasks</a>
+                    <a href="/restrictedTasks/landing?userId=<%= userId%>&friendId=<%= item.userId%>&groupId=<%= groupId%>&groupName=<%= groupName%>" 
+                      class="btn btn-primary col-sm mx-2">See Tasks</a>
                   </div>
                 </div>
               </div>
