--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -9,7 +9,7 @@
 
   <body>
     <div class="container mt-4">
-      <h1 class="text-center"><%=data[0].names%></h1>
+      <h1 class="text-center"><%=names%></h1>
     </div>
     <div class="container mt-4">
       <a href="" class="btn btn-primary mt-4">Stats</a>
