Added sign in functionality

--- a/views/groupView.ejs
+++ b/views/groupView.ejs
@@ -9,7 +9,7 @@
 
  <body>
   <div class="container mt-4">
-    <a href="/groups/landing?userId=<%userId%>" class="btn btn-primary position-relative">Back</a>
+    <a href="/groups/landing?userId=<%= userId%>" class="btn btn-primary position-relative">Back</a>
   </div>
   
   <div class="container mt-4">
