--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -8,24 +8,21 @@
  </head>
 
   <body>
-   <div class="container mt-4">
-     <div class="card">
-       <div class="card-body">
-          <h2>Sign In</h2>
+    <div class="container mt-4">
+      <div class="card">
+        <div class="card-body">
+          <h2>Sign Up</h2>
           <form action="signin" method="POST">
             <div class="form-group">
-              <label for="userId">UserId</label>
-              <input type="text" class="form-control col-lg-9" id="userId" placeholder="Enter UserId" name="userId">
+              <label for="userId">Name</label>
+              <input type="text" class="form-control col-lg-9" id="userId" placeholder="Enter Name" name="userId">
               <label for="password">Password</label>
               <input type="text" class="form-control col-lg-9" id="password" placeholder="Enter Password" name="password">
             </div>
-            <button type="submit" class="btn btn-primary">Sign In</button>
-            <a href="/signup/" class="btn btn-primary mx-4">Sign Up</a>
+            <button type="submit" class="btn btn-primary">Sign Up</button>
           </form>
-        <%if (!success) {%>
-          <p class="text-danger">Either userId or password is incorrect</p>
-        <%}%>
-     </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
