--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -12,10 +12,11 @@
       <div class="card">
         <div class="card-body">
           <h2>Sign Up</h2>
-          <form action="signin" method="POST">
+          <p class="text-primary">Your login userId: <%= userId%></p>
+          <form action="createUser" method="POST">
             <div class="form-group">
-              <label for="userId">Name</label>
-              <input type="text" class="form-control col-lg-9" id="userId" placeholder="Enter Name" name="userId">
+              <label for="name">Name</label>
+              <input type="text" class="form-control col-lg-9" id="name" placeholder="Enter Name" name="name">
               <label for="password">Password</label>
               <input type="text" class="form-control col-lg-9" id="password" placeholder="Enter Password" name="password">
             </div>
