--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -15,7 +15,7 @@
       <a href="/checklist/landing?userId=<%= userId%>" class="btn btn-primary mt-4">My Checklists</a>
       <a href="/groups/landing?userId=<%= userId%>" class="btn btn-primary mt-4">My Groups</a>
       <div class="container mt-4">
-        <h4 class="text-center">Completion rate: <%=completionRate%></h1>
+        <h4 class="text-center">Completion rate: <%=userId%></h1>
       </div>
       <div class="card">
         <div class="card-body">
